--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">TheRunner</string>
-    <string name="sign_up">Sign up to use the app! </string>
+    <string name="sign_up">Sign Up </string>
     <string name="submit">Submit</string>
     <string name="username">Enter username</string>
-    <string name="login">Login to use the app! </string>
+    <string name="login">LOGIN </string>
+    <string name="new_user">Or are you new to TheRunner? </string>
 </resources>
