Layout Design changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="average_speed">AVERAGE SPEED</string>
     <string name="max_speed">MAX SPEED</string>
     <string name="logout">LOGOUT</string>
+    <string name="previous_runs">Previous Runs</string>
 
 
 </resources>
