--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
     <string name="new_user">Nouveau ? Cliquez ici</string>
     <string name="start">DÉBUT DE COURSE</string>
     <string name="time">TEMPS</string>
-    <string name="kilometers">KILOMETREÈ</string>
+    <string name="kilometers">Kilomètres</string>
     <string name="finish">TERMINER</string>
     <string name="goToHomepage">Menu Principal</string>
     <string name="average_speed">Vitesse moyenne</string>
